--- a/02_express/package.json
+++ b/02_express/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "echo \"node index.js"
   },
-  "keywords": [],
+  "keywords": [
+    "express",
+    "tea"
+  ],
   "author": "",
   "license": "ISC",
   "description": ""
